Fixed text align in headers

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -67,6 +67,7 @@ table {
 h1, h2, h3, h4, h5, h6 {
     overflow: hidden !important;
     padding: 15px 0;
+    text-align: left;
 }
 
 h1 {
